--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
   },
   "homepage": "https://github.com/frankarinze/assesment#readme",
   "devDependencies": {
+    "eslint": "^7.21.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.5.0",
     "sequelize": "^6.5.0"
   }
 }
