feat: added create account feature

--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bitcoin-address-generator": "^1.0.2",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ethereumjs-util": "^7.0.9",
+    "ethereumjs-wallet": "^1.0.1",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
