--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
-  "name": "assesment",
-  "version": "1.0.0",
-  "description": "Wallet app",
-  "main": "server.js",
-  "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/frankarinze/assesment.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/frankarinze/assesment/issues"
-  },
-  "homepage": "https://github.com/frankarinze/assesment#readme",
-  "devDependencies": {
-    "eslint": "^7.21.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "bitcoin-address-generator": "^1.0.2",
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "ethereumjs-util": "^7.0.9",
-    "ethereumjs-wallet": "^1.0.1",
-    "express": "^4.17.1",
-    "helmet": "^4.4.1",
-    "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.2.5",
-    "nodemailer": "^6.5.0",
-    "sequelize": "^6.5.0"
-  }
+	"name": "octo-wallet",
+	"version": "1.0.0",
+	"description": "A mock cryptocurrency network system of with user management, Bitcoin and Ethereum wallet management and transaction management.",
+	"main": "server.js",
+	"scripts": {
+		"dev": "nodemon server.js",
+		"start": "node server.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/ogunsoladebayo/octo-wallet.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/ogunsoladebayo/octo-wallet/issues"
+	},
+	"homepage": "https://github.com/ogunsoladebayo/octo-wallet#readme",
+	"devDependencies": {
+		"eslint": "^7.21.0",
+		"morgan": "^1.10.0",
+		"nodemon": "^2.0.7"
+	},
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"bitcoin-address-generator": "^1.0.2",
+		"colors": "^1.4.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"ethereumjs-util": "^7.0.9",
+		"ethereumjs-wallet": "^1.0.1",
+		"express": "^4.17.1",
+		"helmet": "^4.4.1",
+		"jsonwebtoken": "^8.5.1",
+		"mysql2": "^2.2.5",
+		"nodemailer": "^6.5.0",
+		"sequelize": "^6.5.0"
+	}
 }
